--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hono": "^4.7.4",
     "http-status-codes": "^2.3.0",
     "postgres": "^3.4.5",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
